Fix Safari on iPhone X having the nav bar on top of the website after scrolling down.

--- a/src/public/css/layout.less
+++ b/src/public/css/layout.less
@@ -174,6 +174,10 @@ i, em {
         right: 0;
         min-height: 55px;
         max-height: 55px;
+
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-bottom: ~"calc(20px + env(safe-area-inset-bottom))";
     }
     .page-content {
         padding-top: 75px;
